--- a/train_config.json
+++ b/train_config.json
@@ -1,10 +1,10 @@
 {
-    "batch_size": 64,
-    "learning_rate": 0.00001,
+    "batch_size": 256,
+    "learning_rate": 0.0001,
     "l2_weight": 0,
-    "epochs": 10,
+    "epochs": 1000,
     "max_steps":0,
     "log_step": 10,
     "log_dir": "logs",
-    "max_games": 1000
-}
+    "max_games": 1000,
+    "step": 1}
